builder: add support for an initramfs
It will be built as part of the "yocto-builder" target.  To deploy
it, you'll need to take it from tmp/deploy and add it to /boot of
your system rootfs, and update grub with an initrd line.

Signed-off-by: Paul Gortmaker <paul.gortmaker@windriver.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -25,3 +25,8 @@ SYSVINIT_ENABLED_CTRLALTDEL = "1"
 
 # May not be right for you, but at least you know what to set/change.
 DEFAULT_TIMEZONE = "America/Toronto"
+
+INITRD = "True"
+INITRAMFS_IMAGE = "yocto-builder-initramfs"
+# We want it separate, and not bundled with the kernel.
+INITRAMFS_IMAGE_BUNDLE = ""
