builder: ensure logs are to disk and not volatile
Signed-off-by: Paul Gortmaker <paul.gortmaker@windriver.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -30,3 +30,5 @@ INITRD = "True"
 INITRAMFS_IMAGE = "yocto-builder-initramfs"
 # We want it separate, and not bundled with the kernel.
 INITRAMFS_IMAGE_BUNDLE = ""
+
+FILESYSTEM_PERMS_TABLES = "files/fs-perms.txt files/builder-fs-perms.txt"
