--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -32,3 +32,6 @@ INITRAMFS_IMAGE = "yocto-builder-initramfs"
 INITRAMFS_IMAGE_BUNDLE = ""
 
 FILESYSTEM_PERMS_TABLES = "files/fs-perms.txt files/builder-fs-perms.txt"
+
+# Use latest dev kernel.
+PREFERRED_PROVIDER_virtual/kernel = "linux-yocto-dev"
