meta-networking: add pkgs that were busybox versions
Signed-off-by: Paul Gortmaker <paul.gortmaker@windriver.com>

--- a/conf/bblayers.conf.sample
+++ b/conf/bblayers.conf.sample
@@ -12,6 +12,7 @@ BBLAYERS ?= " \
   /home/paul/poky/meta-intel \
   /home/paul/poky/meta-builder \
   /home/paul/poky/meta-openembedded/meta-oe \
+  /home/paul/poky/meta-openembedded/meta-networking \
   "
 BBLAYERS_NON_REMOVABLE ?= " \
   /home/paul/poky/meta \
