adduser: disable busybox versions
We'll consider a port of the adduser pkg from debian at some point.
It appears that RHEL based stuff just symlinks adduser to useradd
and so on for the other three.

Signed-off-by: Paul Gortmaker <paul.gortmaker@windriver.com>

--- a/recipes-core/busybox/busybox/builder.cfg
+++ b/recipes-core/busybox/busybox/builder.cfg
@@ -12,3 +12,7 @@
 # CONFIG_RUN_PARTS is not set
 # CONFIG_USLEEP is not set
 # CONFIG_DUMPKMAP is not set
+# CONFIG_ADDUSER is not set
+# CONFIG_ADDGROUP is not set
+# CONFIG_DELUSER is not set
+# CONFIG_DELGROUP is not set
