builder: assign /root instead of /home/root to ROOT_HOME
Hopefully this will be the yocto / oe-core default someday,
but for now we set it here for our layer.

Signed-off-by: Paul Gortmaker <paul.gortmaker@windriver.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -36,6 +36,9 @@ FILESYSTEM_PERMS_TABLES = "files/fs-perms.txt files/builder-fs-perms.txt"
 # Use latest dev kernel.
 PREFERRED_PROVIDER_virtual/kernel = "linux-yocto-dev"
 
+# Default is currently /home/root which is non-standard.
+ROOT_HOME = "/root"
+
 ####  begin busybox removal ####
 
 # busybox is only for initrd - we do not want it on the main rootfs.
