--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -23,6 +23,9 @@ SYSVINIT_ENABLED_GETTYS = "1 2 3 4 5 6"
 # Requires a corresponding recipe patch
 SYSVINIT_ENABLED_CTRLALTDEL = "1"
 
+# Add sbin triplet to $PATH ; Requires a corresponding base-files patch
+SBIN_FOR_NON_ROOT = "1"
+
 # May not be right for you, but at least you know what to set/change.
 DEFAULT_TIMEZONE = "America/Toronto"
 
