lxc.cfg: Add in MACVLAN and VETH for lxc configuration
This will allow for sharing a single ethernet with multiple containers.

Signed-off-by: Jason Wessel <jason.wessel@windriver.com>

--- a/recipes-kernel/linux/linux-yocto/lxc.cfg
+++ b/recipes-kernel/linux/linux-yocto/lxc.cfg
@@ -19,3 +19,7 @@ CONFIG_BLK_CGROUP=m
 CONFIG_NETPRIO_CGROUP=m
 
 CONFIG_DEVPTS_MULTIPLE_INSTANCES=y
+
+# Support for virtual ethernet and LXC
+CONFIG_VETH=y
+CONFIG_MACVLAN=y
