op3: add multilib configuration
Signed-off-by: Bruce Ashfield <bruce.ashfield@windriver.com>

--- a/conf/distro/op3.conf
+++ b/conf/distro/op3.conf
@@ -12,12 +12,16 @@ TARGET_VENDOR = "-op3"
 LOCALCONF_VERSION = "1"
 LAYER_CONF_VERSION ?= "6"
 
-# Override these in op3 based distros
 OP3_DEFAULT_DISTRO_FEATURES = "largefile opengl ptest multiarch wayland"
 OP3_DEFAULT_EXTRA_RDEPENDS = "packagegroup-core-boot"
 OP3_DEFAULT_EXTRA_RRECOMMENDS = "kernel-module-af-packet"
 
 DISTRO_FEATURES ?= "${DISTRO_FEATURES_DEFAULT} ${DISTRO_FEATURES_LIBC} ${OP3_DEFAULT_DISTRO_FEATURES}"
+
+# multlib configs
+require conf/multilib.conf
+MULTILIBS = "multilib:lib32"
+DEFAULTTUNE_virtclass-multilib-lib32 = "x86"
 
 PREFERRED_VERSION_linux-yocto ?= "3.14%"
 PREFERRED_VERSION_linux-yocto_qemux86 ?= "3.14%"
