bblayers: add gnome, xfce and virtualization to sample
Signed-off-by: Paul Gortmaker <paul.gortmaker@windriver.com>

--- a/conf/bblayers.conf.sample
+++ b/conf/bblayers.conf.sample
@@ -14,6 +14,9 @@ BBLAYERS ?= " \
   /home/paul/poky/meta-openembedded/meta-oe \
   /home/paul/poky/meta-openembedded/meta-networking \
   /home/paul/poky/meta-openembedded/meta-python \
+  /home/paul/poky/meta-openembedded/meta-gnome \
+  /home/paul/poky/meta-openembedded/meta-xfce \
+  /home/paul/poky/meta-virtualization \
   "
 BBLAYERS_NON_REMOVABLE ?= " \
   /home/paul/poky/meta \
