--- a/conf/bblayers.conf.sample
+++ b/conf/bblayers.conf.sample
@@ -15,6 +15,8 @@ BBLAYERS ?= " \
   /home/paul/poky/meta-openembedded/meta-gnome \
   /home/paul/poky/meta-openembedded/meta-xfce \
   /home/paul/poky/meta-virtualization \
+  /home/paul/poky/meta-openembedded/meta-python \
+  /home/paul/poky/meta-openembedded/meta-networking \
   "
 BBLAYERS_NON_REMOVABLE ?= " \
   /home/paul/poky/meta \
