initramfs: remove busybox from there too
The size goes from about 7M to 13M but the suck factor is
decreased immensely.

Signed-off-by: Paul Gortmaker <paul.gortmaker@windriver.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -44,7 +44,7 @@ ROOT_HOME = "/root"
 
 ####  begin busybox removal ####
 
-# busybox is only for initrd - we do not want it on the main rootfs.
+# busybox - we do not want it on the main rootfs or the initramfs.
 PACKAGE_EXCLUDE_pn-yocto-builder = "busybox busybox-dev busybox-udhcpc busybox-dbg busybox-ptest busybox-udhcpd busybox-hwclock busybox-syslog"
 
 # Hammer approach ; change login_manager instead after looking at bitbake -e
