builder: enhance hostname setting ability in deployed image.
Make it so a hostname can be chosen for the deployed machine
image.  We used to use HOSTNAME but that is already in use for
the hostname of the building machine ; so choose TARGETNAME to
make it clear we are talking about the hostname of the image
deployed on the target.

We stick the image build date into the hostname to give some
level of overlap avoidance, and to convey the age of the
original deployment.

Signed-off-by: Paul Gortmaker <paul.gortmaker@windriver.com>

--- a/conf/local.conf.sample
+++ b/conf/local.conf.sample
@@ -61,6 +61,11 @@ KMACHINE_genericx86-64 ?= "common-pc-64"
 # MACHINE ??= "qemux86"
 
 #
+# Hostname to be used on the deployed target image
+#
+# TARGETNAME = "mystylinkit"
+
+#
 # Where to place downloads
 #
 # During a first build the system will download many different source code tarballs
