lighthttpd: block it from being installed.
If we want a webserver, it probably will be a more full featured
one than this.

Signed-off-by: Paul Gortmaker <paul.gortmaker@windriver.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -54,6 +54,7 @@ VIRTUAL-RUNTIME_login_manager = "shadow"
 # Actions like "remove" are one item per line, not a list!
 RDEPENDS_packagegroup-core-boot_remove = "busybox"
 RDEPENDS_packagegroup-core-boot_remove = "busybox-hwclock"
+RDEPENDS_packagegroup-core-full-cmdline-sys-services_remove = "lighttpd"
 
 SYSVINIT_SCRIPTS_remove_pn-packagegroup-core-boot = "busybox-hwclock"
 
