--- a/conf/local.conf.sample
+++ b/conf/local.conf.sample
@@ -55,6 +55,7 @@ MACHINE ?= "genericx86-64"
 KMACHINE_genericx86-64 ?= "common-pc-64"
 #MACHINE ?= "mpc8315e-rdb"
 #MACHINE ?= "edgerouter"
+# To use the i7 optimized compile settings, you need meta-intel
 #MACHINE="intel-corei7-64"
 #
 # This sets the default machine to be qemux86 if no other machine is selected:
