branding: change variables, recipes and images to 'pod'
Signed-off-by: Bruce Ashfield <bruce.ashfield@windriver.com>

--- a/conf/distro/pod.conf
+++ b/conf/distro/pod.conf
@@ -1,51 +1,55 @@
-DISTRO = "op3"
-DISTRO_NAME = "op3"
+DISTRO = "pod"
+DISTRO_NAME = "pod"
 DISTRO_VERSION = "1.0"
 DISTRO_CODENAME = ""
-SDK_VENDOR = "-op3sdk"
+SDK_VENDOR = "-pod-sdk"
 SDK_VERSION := "${@'${DISTRO_VERSION}'.replace('snapshot-${DATE}','snapshot')}"
 
 MAINTAINER = "Wind River <windriver@windriver.com>"
 
-TARGET_VENDOR = "-op3"
+TARGET_VENDOR = "-nt"
 
 LOCALCONF_VERSION = "1"
 LAYER_CONF_VERSION ?= "6"
 
-OP3_DEFAULT_DISTRO_FEATURES = "largefile opengl ptest multiarch wayland"
-OP3_DEFAULT_EXTRA_RDEPENDS = "packagegroup-core-boot"
-OP3_DEFAULT_EXTRA_RRECOMMENDS = "kernel-module-af-packet"
+POD_DEFAULT_DISTRO_FEATURES = "largefile opengl ptest multiarch wayland alsa argp bluetooth ext2 usbgadget usbhost wifi xattr nfs zeroconf pci x11"
+POD_DEFAULT_EXTRA_RDEPENDS = "packagegroup-core-boot"
+POD_DEFAULT_EXTRA_RRECOMMENDS = "kernel-module-af-packet"
 
-DISTRO_FEATURES ?= "${DISTRO_FEATURES_DEFAULT} ${DISTRO_FEATURES_LIBC} ${OP3_DEFAULT_DISTRO_FEATURES}"
+DISTRO_FEATURES ?= "${DISTRO_FEATURES_LIBC} ${POD_DEFAULT_DISTRO_FEATURES}"
 
 # multlib configs
 require conf/multilib.conf
 MULTILIBS = "multilib:lib32"
 DEFAULTTUNE_virtclass-multilib-lib32 = "x86"
 
-PREFERRED_VERSION_linux-yocto ?= "3.14%"
-PREFERRED_VERSION_linux-yocto_qemux86 ?= "3.14%"
-PREFERRED_VERSION_linux-yocto_qemux86-64 ?= "3.14%"
-PREFERRED_VERSION_linux-yocto_qemuarm ?= "3.14%"
-PREFERRED_VERSION_linux-yocto_qemumips ?= "3.14%"
-PREFERRED_VERSION_linux-yocto_qemumips64 ?= "3.14%"
-PREFERRED_VERSION_linux-yocto_qemuppc ?= "3.14%"
+PREFERRED_VERSION_linux-yocto ?= "3.19%"
+PREFERRED_VERSION_linux-yocto_qemux86 ?= "3.19%"
+PREFERRED_VERSION_linux-yocto_qemux86-64 ?= "3.19%"
+PREFERRED_VERSION_linux-yocto_qemuarm ?= "3.19%"
+PREFERRED_VERSION_linux-yocto_qemumips ?= "3.19%"
+PREFERRED_VERSION_linux-yocto_qemumips64 ?= "3.19%"
+PREFERRED_VERSION_linux-yocto_qemuppc ?= "3.19%"
 
 SDK_NAME = "${DISTRO}-${TCLIBC}-${SDK_ARCH}-${IMAGE_BASENAME}-${TUNE_PKGARCH}"
 SDKPATH = "/opt/${DISTRO}/${SDK_VERSION}"
 
-EXTRAOPKGCONFIG = "op3-feed-config-opkg"
+EXTRAOPKGCONFIG = "pod-feed-config-opkg"
 
-DISTRO_EXTRA_RDEPENDS += " ${OP3_DEFAULT_EXTRA_RDEPENDS}"
-DISTRO_EXTRA_RRECOMMENDS += " ${OP3_DEFAULT_EXTRA_RRECOMMENDS}"
+DISTRO_EXTRA_RDEPENDS += " ${POD_DEFAULT_EXTRA_RDEPENDS}"
+DISTRO_EXTRA_RRECOMMENDS += " ${POD_DEFAULT_EXTRA_RRECOMMENDS}"
 
-OP3QEMUDEPS = "${@bb.utils.contains("INCOMPATIBLE_LICENSE", "GPLv3", "", "packagegroup-core-device-devel",d)}"
-DISTRO_EXTRA_RDEPENDS_append_qemuarm = " ${OP3QEMUDEPS}"
-DISTRO_EXTRA_RDEPENDS_append_qemuarm64 = " ${OP3QEMUDEPS}"
-DISTRO_EXTRA_RDEPENDS_append_qemumips = " ${OP3QEMUDEPS}"
-DISTRO_EXTRA_RDEPENDS_append_qemuppc = " ${OP3QEMUDEPS}"
-DISTRO_EXTRA_RDEPENDS_append_qemux86 = " ${OP3QEMUDEPS}"
-DISTRO_EXTRA_RDEPENDS_append_qemux86-64 = " ${OP3QEMUDEPS}"
+PODQEMUDEPS = "${@bb.utils.contains("INCOMPATIBLE_LICENSE", "GPLv3", "", "packagegroup-core-device-devel",d)}"
+DISTRO_EXTRA_RDEPENDS_append_qemuarm = " ${PODQEMUDEPS}"
+DISTRO_EXTRA_RDEPENDS_append_qemuarm64 = " ${PODQEMUDEPS}"
+DISTRO_EXTRA_RDEPENDS_append_qemumips = " ${PODQEMUDEPS}"
+DISTRO_EXTRA_RDEPENDS_append_qemuppc = " ${PODQEMUDEPS}"
+DISTRO_EXTRA_RDEPENDS_append_qemux86 = " ${PODQEMUDEPS}"
+DISTRO_EXTRA_RDEPENDS_append_qemux86-64 = " ${PODQEMUDEPS}"
+
+DISTRO_FEATURES_append = " systemd"
+VIRTUAL-RUNTIME_init_manager = "systemd"
+DISTRO_FEATURES_BACKFILL_CONSIDERED += "sysvinit"
 
 TCLIBCAPPEND = ""
 
