--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -30,7 +30,7 @@ SBIN_FOR_NON_ROOT = "1"
 DEFAULT_TIMEZONE = "America/Toronto"
 
 INITRD = "True"
-INITRAMFS_IMAGE = "op3-builder-initramfs"
+INITRAMFS_IMAGE = "nucleo-t-builder-initramfs"
 # We want it separate, and not bundled with the kernel.
 INITRAMFS_IMAGE_BUNDLE = ""
 
