--- a/meta-pod/conf/layer.conf
+++ b/meta-pod/conf/layer.conf
@@ -4,15 +4,15 @@ BBPATH .= ":${LAYERDIR}"
 # We have recipes-* directories, add to BBFILES
 BBFILES += "${LAYERDIR}/recipes-*/*/*.bb ${LAYERDIR}/recipes-*/*/*.bbappend"
 
-BBFILE_COLLECTIONS += "builder"
-BBFILE_PATTERN_builder = "^${LAYERDIR}/"
-BBFILE_PRIORITY_builder = "1"
+BBFILE_COLLECTIONS += "pod"
+BBFILE_PATTERN_pod = "^${LAYERDIR}/"
+BBFILE_PRIORITY_pod = "1"
 
 # This should only be incremented on significant changes that will
 # cause compatibility issues with other layers
-LAYERVERSION_builder = "1"
+LAYERVERSION_pod = "1"
 
-LAYERDEPENDS_builder = "core"
+LAYERDEPENDS_pod = "core"
 
 # Grub2 is annoying but grub-legacy does't do ext4 w/o patches
 #PREFERRED_VERSION_grub = "0.97"
@@ -29,7 +29,7 @@ SBIN_FOR_NON_ROOT = "1"
 # May not be right for you, but at least you know what to set/change.
 DEFAULT_TIMEZONE = "America/Toronto"
 
-FILESYSTEM_PERMS_TABLES = "files/fs-perms.txt files/builder-fs-perms.txt"
+FILESYSTEM_PERMS_TABLES = "files/fs-perms.txt files/pod-fs-perms.txt"
 
 # Use latest dev kernel.
 PREFERRED_PROVIDER_virtual/kernel = "linux-yocto-dev"
