--- a/meta-pod/conf/distro/pod.conf
+++ b/meta-pod/conf/distro/pod.conf
@@ -39,6 +39,8 @@ EXTRAOPKGCONFIG = "pod-feed-config-opkg"
 DISTRO_EXTRA_RDEPENDS += " ${POD_DEFAULT_EXTRA_RDEPENDS}"
 DISTRO_EXTRA_RRECOMMENDS += " ${POD_DEFAULT_EXTRA_RRECOMMENDS}"
 
+LICENSE_FLAGS_WHITELIST += " commercial"
+
 PODQEMUDEPS = "${@bb.utils.contains("INCOMPATIBLE_LICENSE", "GPLv3", "", "packagegroup-core-device-devel",d)}"
 DISTRO_EXTRA_RDEPENDS_append_qemuarm = " ${PODQEMUDEPS}"
 DISTRO_EXTRA_RDEPENDS_append_qemuarm64 = " ${PODQEMUDEPS}"
