overc: add pam to distro config
Signed-off-by: Bruce Ashfield <bruce.ashfield@windriver.com>

--- a/meta-pod/conf/distro/pod.conf
+++ b/meta-pod/conf/distro/pod.conf
@@ -7,12 +7,12 @@ SDK_VERSION := "${@'${DISTRO_VERSION}'.replace('snapshot-${DATE}','snapshot')}"
 
 MAINTAINER = "Wind River <windriver@windriver.com>"
 
-TARGET_VENDOR = "-nt"
+TARGET_VENDOR = "-overc"
 
 LOCALCONF_VERSION = "1"
 LAYER_CONF_VERSION ?= "6"
 
-POD_DEFAULT_DISTRO_FEATURES = "largefile opengl ptest multiarch wayland alsa argp bluetooth ext2 usbgadget usbhost wifi xattr nfs zeroconf pci x11"
+POD_DEFAULT_DISTRO_FEATURES = "largefile opengl ptest multiarch wayland alsa argp bluetooth ext2 usbgadget usbhost wifi xattr nfs zeroconf pci x11 pam"
 POD_DEFAULT_EXTRA_RDEPENDS = "packagegroup-core-boot"
 POD_DEFAULT_EXTRA_RRECOMMENDS = "kernel-module-af-packet"
 
