--- a/meta-pod/conf/distro/pod.conf
+++ b/meta-pod/conf/distro/pod.conf
@@ -53,6 +53,8 @@ DISTRO_FEATURES_append = " systemd"
 VIRTUAL-RUNTIME_init_manager = "systemd"
 DISTRO_FEATURES_BACKFILL_CONSIDERED += "sysvinit"
 
+VIRTUAL-RUNTIME_graphical_init_manager ?= "lxdm"
+
 TCLIBCAPPEND = ""
 
 QEMU_TARGETS ?= "arm aarch64 i386 mips mipsel ppc x86_64"
