pod: list ourselves in sanity tested distros
Signed-off-by: Paul Gortmaker <paul.gortmaker@windriver.com>

--- a/meta-pod/conf/distro/pod.conf
+++ b/meta-pod/conf/distro/pod.conf
@@ -85,6 +85,7 @@ CONNECTIVITY_CHECK_URIS ?= " \
              http://bugzilla.yoctoproject.org/report.cgi"
 
 SANITY_TESTED_DISTROS ?= " \
+            pod-1.0 \n \
             Ubuntu-12.04 \n \
             Ubuntu-14.04 \n \
             Ubuntu-14.10 \n \
