--- a/meta-pod/conf/local.conf.sample
+++ b/meta-pod/conf/local.conf.sample
@@ -115,7 +115,7 @@ KMACHINE_genericx86-64 ?= "common-pc-64"
 # Ultimately when creating custom policy, people will likely end up subclassing 
 # these defaults.
 #
-DISTRO ?= "poky"
+DISTRO ?= "pod"
 # As an example of a subclass there is a "bleeding" edge policy configuration
 # where many versions are set to the absolute latest code from the upstream 
 # source control systems. This is just mentioned here as an example, its not
