layer.conf: fix typo in comment
Signed-off-by: Paul Gortmaker <paul.gortmaker@windriver.com>

--- a/meta-pod/conf/layer.conf
+++ b/meta-pod/conf/layer.conf
@@ -14,7 +14,7 @@ LAYERVERSION_pod = "1"
 
 LAYERDEPENDS_pod = "core"
 
-# Grub2 is annoying but grub-legacy does't do ext4 w/o patches
+# Grub2 is annoying but grub-legacy doesn't do ext4 w/o patches
 #PREFERRED_VERSION_grub = "0.97"
 
 # Default is only a single getty on VC1
