libgphoto2: import old version and make it preferred
The uprev of libgphoto2 to 2.5.8 in meta-oe breaks the build
of gvfs.  So import the older version recipe and make it the
preferred version as a temporary workaround.

Signed-off-by: Paul Gortmaker <paul.gortmaker@windriver.com>

--- a/meta-pod/conf/layer.conf
+++ b/meta-pod/conf/layer.conf
@@ -17,6 +17,9 @@ LAYERDEPENDS_pod = "core"
 # Grub2 is annoying but grub-legacy doesn't do ext4 w/o patches
 #PREFERRED_VERSION_grub = "0.97"
 
+# The 2.5.8 uprev breaks gvfs somehow ; so use the older one for now.
+PREFERRED_VERSION_libgphoto2 = "2.4.11"
+
 # Default is only a single getty on VC1
 SYSVINIT_ENABLED_GETTYS = "1 2 3 4 5 6"
 
