xfce4: downrev to xfce4-notifyd 0.2.2
The uprev to 0.2.4 doesn't even build.  :(

Signed-off-by: Paul Gortmaker <paul.gortmaker@windriver.com>

--- a/meta-pod/conf/layer.conf
+++ b/meta-pod/conf/layer.conf
@@ -20,6 +20,9 @@ LAYERDEPENDS_pod = "core"
 # The 2.5.8 uprev breaks gvfs somehow ; so use the older one for now.
 PREFERRED_VERSION_libgphoto2 = "2.4.11"
 
+# The uprev to 0.2.4 doesn't even build :(  so use the older one for now.
+PREFERRED_VERSION_xfce4-notifyd = "0.2.2"
+
 # Default is only a single getty on VC1
 SYSVINIT_ENABLED_GETTYS = "1 2 3 4 5 6"
 
