pod: fix container shutdown notifier mount reqts
The local-fs.target was not handling the /opt/container
bind mounts as first thought.  Instead tell systemd
exactly what mount is required and thus have systemd
automatically sort out the start/stop ordering of components.

Signed-off-by: Jim Somerville <Jim.Somerville@windriver.com>

--- a/meta-pod/recipes-support/container-shutdown-notifier/files/container-shutdown-notifier.service
+++ b/meta-pod/recipes-support/container-shutdown-notifier/files/container-shutdown-notifier.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=Container Shutdown Notifier Service
-After=local-fs.target
+RequiresMountsFor=/opt/container/local
 
 [Service]
 Type=oneshot
