overc: allow linux-yocto-rt to be used
By default OverC used linux-yocto-dev, but for deployments that require
realtime capabilities, the linux-yocto-rt kernel is more appropriate.

This commit creates a bbappend to apply the proper configuration to a -rt
kernel, and makes the virtual/kernel assignment conditional, allowing the
-rt kernel to be selected in a local.conf via:

  PREFERRED_PROVIDER_virtual/kernel ?= "linux-yocto-rt"

Signed-off-by: Bruce Ashfield <bruce.ashfield@windriver.com>

--- a/meta-pod/conf/layer.conf
+++ b/meta-pod/conf/layer.conf
@@ -35,7 +35,7 @@ DEFAULT_TIMEZONE = "America/Toronto"
 FILESYSTEM_PERMS_TABLES = "files/fs-perms.txt files/pod-fs-perms.txt"
 
 # Use latest dev kernel.
-PREFERRED_PROVIDER_virtual/kernel = "linux-yocto-dev"
+PREFERRED_PROVIDER_virtual/kernel ?= "linux-yocto-dev"
 
 # Default is currently /home/root which is non-standard.
 ROOT_HOME = "/root"
