overc: add a package-name bbclass to make srpm compatible
Redhat/CentOS use the ${pn}-devel for their building used rpm packages, and
OE uses the ${pn}-dev. In order to compatible with Redhat/CentOS, add ${pn}-devel
for each ${pn}-dev rpm packages.

In addition, Redhat/CentOS usually use ${pn}-libs to provide library files for
some packages, and OE doesn't afford such a rpm package, so add ${pn}-libs rprovides
for each ${pn}-dev rpm package in order to meet the buildrequirement of the third party
srpm packages' building.

This feature is try to make srpm compatible with Redhat/CentOs, so remvoed the debian
distro's package name compatible feature.

Signed-off-by: fupan li <fupan.li@windriver.com>
Signed-off-by: Guojian Zhou <guojian.zhou@windriver.com>
Signed-off-by: Bruce Ashfield <bruce.ashfield@windriver.com>

--- a/meta-pod/conf/distro/pod.conf
+++ b/meta-pod/conf/distro/pod.conf
@@ -17,6 +17,7 @@ POD_DEFAULT_EXTRA_RDEPENDS = "packagegroup-core-boot"
 POD_DEFAULT_EXTRA_RRECOMMENDS = "kernel-module-af-packet"
 
 DISTRO_FEATURES ?= "${DISTRO_FEATURES_LIBC} ${POD_DEFAULT_DISTRO_FEATURES}"
+INHERIT_DISTRO ?= " debian devshell sstate license package-name"
 
 # multlib configs
 require conf/multilib.conf
