conf: add meta-overc into bblayers sample
Signed-off-by: Bruce Ashfield <bruce.ashfield@windriver.com>

--- a/conf/bblayers.conf.sample
+++ b/conf/bblayers.conf.sample
@@ -9,6 +9,7 @@ BBLAYERS ?= " \
   /home/paul/poky/meta \
   /home/paul/poky/meta-yocto \
   /home/paul/poky/meta-yocto-bsp \
+  /home/paul/poky/meta-overc \
   /home/paul/poky/meta-overc/meta-cube \
   /home/paul/poky/meta-openembedded/meta-oe \
   /home/paul/poky/meta-openembedded/meta-gnome \
