--- a/meta-cube/recipes-support/cube-cmd-server/files/cube-cmd-server.conf
+++ b/meta-cube/recipes-support/cube-cmd-server/files/cube-cmd-server.conf
@@ -1,16 +1,53 @@
 # Configuration file for cube-cmd-server
 
-# Lines starting with # as first non-whitespace character are ignored.
-# Settings are tuples of the form a:b where a is the option name and
-# b is the setting for that option.  Only one tuple per line is read.
+# This configuration file follows a limited YAML format, with the
+# structures found in this file currently supported.
+
 # Templates of the form %label% are to be automatically replaced at
 # rootfs build time with an actual value.
 
-# Container to monitor.  Use 'none' to terminate the server.
-monitor-container:%cn%
+# command: a list of commands that are understood and processed
+#          by the command server.
+#
+#          Each command is specified by name, and has the values
+#          action: and acl:
+#
+#          action: is the command to execute on a command, options
+#                  are ignore or <command>
+#
+#          acl: is the list of containers that are allowed to issue
+#               the command
+#
+# monitor: the list of containers to monitor, it has one value "container:"
+#
+#          container: the container name to monitor, or '*' for all containers
+#
+commands:
+  reboot:
+    acl:
+      - dom0
+      - domE
+      - cube-server
+    action: reboot
 
-# Action to take on shutdown.  Options are ignore, shutdown
-shutdown:shutdown
+  shutdown:
+    acl:
+      - dom0
+      - domE
+      - cube-server
+    action: shutdown
 
-# Action to take on reboot.  Options are ignore, reboot
-reboot:reboot
+  console:
+    acl: '*'
+
+dom0:
+  monitor: '*'
+  commands: '*'
+
+host:
+  monitor: dom0
+  commands:
+    - reboot
+    - shutdown
+
+
