--- a/meta-cube/recipes-support/cube-cmd-server/files/cube-cmd-server.conf
+++ b/meta-cube/recipes-support/cube-cmd-server/files/cube-cmd-server.conf
@@ -1,39 +1,16 @@
 # Configuration file for cube-cmd-server
 
-# This configuration file follows a limited YAML format, with the
-# structures found in this file currently supported.
-
+# Lines starting with # as first non-whitespace character are ignored.
+# Settings are tuples of the form a:b where a is the option name and
+# b is the setting for that option.  Only one tuple per line is read.
 # Templates of the form %label% are to be automatically replaced at
 # rootfs build time with an actual value.
 
-# command: a list of commands that are understood and processed
-#          by the command server.
-#
-#          Each command is specified by name, and has the values
-#          action: and acl:
-#
-#          action: is the command to execute on a command, options
-#                  are ignore or <command>
-#
-#          acl: is the list of containers that are allowed to issue
-#               the command
-#
-# monitor: the list of containers to monitor, it has one value "container:"
-#
-#          container: the container name to monitor, or '*' for all containers
-#
-command:
-  reboot:
-    acl:
-      - domE
-      - cube-server
-    action: reboot
+# Container to monitor.  Use 'none' to terminate the server.
+monitor-container:%cn%
 
-  shutdown:
-    acl:
-      - domE
-      - cube-server
-    action: shutdown
+# Action to take on shutdown.  Options are ignore, shutdown
+shutdown:shutdown
 
-monitor:
-  container:*
+# Action to take on reboot.  Options are ignore, reboot
+reboot:reboot
