systemd: port udev device creation to 225
The original integration of the systemd udev changes was specific
to 216, and breaks newer versions of udev.

This change ports the patch to 225, and creates version specific
bbappends to work with multiple versions of systemd.

We also change the layer configuration to allow dangling bbappends,
since both versions of systemd will not be present at a given
time.

Signed-off-by: Bruce Ashfield <bruce.ashfield@windriver.com>

--- a/meta-cube/conf/layer.conf
+++ b/meta-cube/conf/layer.conf
@@ -8,6 +8,8 @@ BBFILE_COLLECTIONS += "cube"
 BBFILE_PATTERN_cube = "^${LAYERDIR}/"
 BBFILE_PRIORITY_cube = "8"
 
+BB_DANGLINGAPPENDS_WARNONLY ?= "true"
+
 # This should only be incremented on significant changes that will
 # cause compatibility issues with other layers
 LAYERVERSION_cube = "1"
