cube: introduce control utilities for peer containers
Signed-off-by: Bruce Ashfield <bruce.ashfield@windriver.com>

--- a/meta-cube/recipes-support/cube-cmd-server/files/cube-cmd-server.conf
+++ b/meta-cube/recipes-support/cube-cmd-server/files/cube-cmd-server.conf
@@ -43,8 +43,14 @@ commands:
   lxc:
     acl:
       - dom0
+    ls:
+      acl: '*'
 
   nsenter:
+    acl:
+      - dom0
+
+  host_cmd:
     acl:
       - dom0
 
