--- a/meta-cube/recipes-support/cube-cmd-server/files/cube-cmd-server.service
+++ b/meta-cube/recipes-support/cube-cmd-server/files/cube-cmd-server.service
@@ -4,7 +4,7 @@ After=local-fs.target
 
 [Service]
 Type=simple
-ExecStart=/sbin/cube-cmd-server
+ExecStart=/sbin/cube-cmd-server -l /var/log/cube-cmd-server.log
 ExecStop=/bin/true
 RemainAfterExit=yes
 
