--- a/meta-cube/recipes-support/dom0-contctl/files/dom0-contctl.service
+++ b/meta-cube/recipes-support/dom0-contctl/files/dom0-contctl.service
@@ -3,7 +3,7 @@ Description=Dom0 Autoboot Code
 After=syslog.target network.target
 
 [Service]
-Type=oneshot
+Type=forking
 RemainAfterExit=yes
 # ExecStartPre=
 # ExecStartPre=
@@ -12,8 +12,9 @@ ExecStop=/opt/dom0-contctl/dom0-containers stop
 # Environment=BOOTUP=serial
 # Environment=CONSOLETYPE=serial
 Delegate=yes
-StandardOutput=syslog
-StandardError=syslog
+StandardInput=tty
+StandardOutput=tty
+# StandardError=syslog
 
 [Install]
-WantedBy=multi-user.target
+WantedBy=basic.target
