distro: ensure that no extra locales are built
We don't want any locales (at the moment), since they can cause runtime issues
if glibc detects a mismatch.

Signed-off-by: Bruce Ashfield <bruce.ashfield@windriver.com>

--- a/conf/distro/overc.conf
+++ b/conf/distro/overc.conf
@@ -54,6 +54,8 @@ DISTRO_FEATURES_append = " systemd"
 VIRTUAL-RUNTIME_init_manager = "systemd"
 DISTRO_FEATURES_BACKFILL_CONSIDERED += "sysvinit"
 
+IMAGE_LINGUAS=""
+
 VIRTUAL-RUNTIME_graphical_init_manager ?= "lxdm"
 
 TCLIBCAPPEND = ""
