--- a/conf/bblayers.conf.sample
+++ b/conf/bblayers.conf.sample
@@ -18,6 +18,7 @@ BBLAYERS ?= " \
   /home/paul/poky/meta-openembedded/meta-python \
   /home/paul/poky/meta-openembedded/meta-networking \
   /home/paul/poky/meta-openembedded/meta-multimedia \
+  /home/paul/poky/meta-cloud-services \
   "
 BBLAYERS_NON_REMOVABLE ?= " \
   /home/paul/poky/meta \
