--- a/meta-cube/recipes-core/kbd/files/chvt.service
+++ b/meta-cube/recipes-core/kbd/files/chvt.service
@@ -1,11 +1,11 @@
 [Unit]
-Description=Change the tty3 to be the active vt
+Description=Change the %OVERC_ACTIVE_VT% to be the active vt
 
 [Service]
 Type=oneshot
-ExecStart=/usr/bin/chvt 3
+ExecStart=/usr/bin/chvt %OVERC_ACTIVE_VT%
 StandardInput=tty
-TTYPath=/dev/tty3
+TTYPath=/dev/tty%OVERC_ACTIVE_VT%
 TTYReset=yes
 TTYVHangup=yes
 
