cube-cmd-server: make systemd service restart
When the server exits cleanly, we want to restart it automatically. Sicne
this is used to add containers to the system and start them as monitored.

Signed-off-by: Bruce Ashfield <bruce.ashfield@windriver.com>

--- a/meta-cube/recipes-support/cube-cmd-server/files/cube-cmd-server.service
+++ b/meta-cube/recipes-support/cube-cmd-server/files/cube-cmd-server.service
@@ -7,6 +7,7 @@ Type=simple
 ExecStart=/sbin/cube-cmd-server -l /var/log/cube-cmd-server.log
 ExecStop=/bin/true
 RemainAfterExit=yes
+Restart=on-success
 
 [Install]
 WantedBy=multi-user.target
