cube: container lifecycle management
We hadd the ability to start/stop and list containers, but no simple way
to add and remove containers from the system.

This commit provides the capability to dom0 to add and remove containers
from the system.

It also arranges for the cube-cmd-server to restart when containers are
added, since that is required to establish communication channels to
those new containers.

Signed-off-by: Bruce Ashfield <bruce.ashfield@windriver.com>

--- a/meta-cube/recipes-support/cube-cmd-server/files/cube-cmd-server.conf
+++ b/meta-cube/recipes-support/cube-cmd-server/files/cube-cmd-server.conf
@@ -54,6 +54,11 @@ commands:
     acl:
       - dom0
 
+  restart:
+    acl:
+      - dom0
+      - self
+
 dom0:
   monitor: '*'
   commands: '*'
@@ -64,6 +69,3 @@ host:
     - reboot
     - shutdown
     - lxc
-
-
-
