--- a/conf/distro/overc.conf
+++ b/conf/distro/overc.conf
@@ -118,3 +118,7 @@ ERROR_QA = "dev-so debug-deps dev-deps debug-files arch pkgconfig la perms \
             compile-host-path dep-cmp installed-vs-shipped install-host-path \
             packages-list perm-config perm-line perm-link pkgv-undefined \
             pn-overrides split-strip var-undefined version-going-backwards"
+
+# Build gnome-keyring
+PNBLACKLIST[gnome-keyring] = ""
+PNBLACKLIST[gcr] = "Incompatible with gnome-keyring"
