overc-conftools: Remove the ext-br interface
The ext-br interface is not used with the Network Manger scheme and
may return at a later time for certain networkd configurations.

Signed-off-by: Jason Wessel <jason.wessel@windriver.com>
Signed-off-by: Bruce Ashfield <bruce.ashfield@windriver.com>

--- a/meta-cube/recipes-support/overc-conftools/source/network_prime/files/overc-network-prime.service
+++ b/meta-cube/recipes-support/overc-conftools/source/network_prime/files/overc-network-prime.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Configure the OverC network-prime
 After=openvswitch-nonetwork.service
-Before=systemd-networkd.service mac-clone-phys-to-br-ext.service
+Before=systemd-networkd.service
 
 [Service]
 Type=oneshot
