screen-getty: Add LDFLAGS and CFLAGS to Makefile
There are now QA checks to ensure that the LD FLAGS are actually used
in the Yocto Project so we actually need to use the LD FLAGS.

Signed-off-by: Jason Wessel <jason.wessel@windriver.com>
Signed-off-by: Bruce Ashfield <bruce.ashfield@windriver.com>

--- a/meta-cube/recipes-extended/screen-getty/files/Makefile
+++ b/meta-cube/recipes-extended/screen-getty/files/Makefile
@@ -9,13 +9,13 @@ clean:
 	rm -f $(OBJS) *.o
 
 %.o: %.c
-	$(CC) -Wall -c $<
+	$(CC) $(CFLAGS) -Wall -c $<
 
 screen-getty: screen-getty.o
-	$(CC) -Wall -o $@ $^
+	$(CC) $(LDFLAGS) -Wall -o $@ $^
 
 agetty-shell: agetty-shell.o
-	$(CC) -Wall -o $@ $^
+	$(CC) $(LDFLAGS) -Wall -o $@ $^
 
 install: $(OBJS)
 	install -d $(DEST)/sbin
