overc-conf-tools: Only run on first boot and rpm package changes
The overc-conf-tools takes around 13 seconds to run on some platforms
just to check the database for consistency.  This operation can be run
on demand with the OverC agent and after any kind of update on boot or
first/next boot.

Signed-off-by: Jason Wessel <jason.wessel@windriver.com>
Signed-off-by: Bruce Ashfield <bruce.ashfield@windriver.com>

--- a/meta-cube/recipes-support/overc-conftools/source/overc-conftools.service
+++ b/meta-cube/recipes-support/overc-conftools/source/overc-conftools.service
@@ -6,7 +6,11 @@ Before=lxc.service
 [Service]
 Type=forking
 Environment=FACTER_ipaddress="192.168.42.2"
-ExecStart=/usr/bin/puppet apply /etc/puppet/manifests/site.pp
+#Run unconditionally 
+#ExecStart=/usr/bin/puppet apply /etc/puppet/manifests/site.pp
+#Only run on first boot and if RPM db has changed
+ExecStart=/bin/sh -c "[ /var/lib/rpm/Packages -nt /var/lib/rpm/puppet_run ] && /usr/bin/puppet apply /etc/puppet/manifests/site.pp && touch /var/lib/rpm/puppet_run"
+
 
 [Install]
 WantedBy=multi-user.target
