--- a/meta-cube/recipes-connectivity/cube-update/cube-update/cube-update.service
+++ b/meta-cube/recipes-connectivity/cube-update/cube-update/cube-update.service
@@ -3,13 +3,11 @@ Description=SmartPM update daemon
 DefaultDependencies=no
 
 [Service]
-Type=forking
+Type=simple
 PIDFile=/etc/cube-update/pid
 ExecStart=/etc/cube-update/cubeupdated start
 ExecReload=/etc/cube-update/cubeupdated restart
 ExecStop=/etc/cube-update/cubeupdated stop
-Restart=always
-RestartSec=600
 WatchdogSec=2419200
 StandardOutput=syslog
 
