meta-overc: update the puppet run file's time with rpm Packages file time
On some arm boards without RTC, when the overc-conftools service running,
the system's time hadn't update to the latest one, thus "touch" a file
couldn't make sure it's newer than the existing file. Instead, this commit
update the puppet run file's time with the latest rpm Packages file time.

Signed-off-by: fli <fupan.li@windriver.com>
Signed-off-by: Bruce Ashfield <bruce.ashfield@windriver.com>

--- a/meta-cube/recipes-support/overc-conftools/source/overc-conftools.service
+++ b/meta-cube/recipes-support/overc-conftools/source/overc-conftools.service
@@ -9,7 +9,7 @@ Environment=FACTER_ipaddress="192.168.42.2"
 #Run unconditionally 
 #ExecStart=/usr/bin/puppet apply /etc/puppet/manifests/site.pp
 #Only run on first boot and if RPM db has changed
-ExecStart=/bin/sh -c "[ /var/lib/rpm/Packages -nt /var/lib/rpm/puppet_run ] && /usr/bin/puppet apply /etc/puppet/manifests/site.pp && touch /var/lib/rpm/puppet_run"
+ExecStart=/bin/sh -c "[ /var/lib/rpm/Packages -nt /var/lib/rpm/puppet_run ] && /usr/bin/puppet apply /etc/puppet/manifests/site.pp && cp --attributes-only -p /var/lib/rpm/Packages /var/lib/rpm/puppet_run"
 
 
 [Install]
