--- a/meta-cube/conf/layer.conf
+++ b/meta-cube/conf/layer.conf
@@ -56,3 +56,8 @@ RDEPENDS_packagegroup-core-full-cmdline-sys-services_remove = "lighttpd"
 SYSVINIT_SCRIPTS_remove_pn-packagegroup-core-boot = "busybox-hwclock"
 
 ####  end busybox removal ####
+
+# OVERC_ESSENTIAL_MODE describes the read/write mode of essential rootfs in OverC. By
+# default, essential rootfs is read-only. To change it to read-write, please update
+# value to "read-write", then rebuild essential rootfs.
+OVERC_ESSENTIAL_MODE = "read-only"
