--- a/meta-cube/recipes-support/overc-conftools/source/overc-conftools.service
+++ b/meta-cube/recipes-support/overc-conftools/source/overc-conftools.service
@@ -1,16 +1,11 @@
 [Unit]
-Description=OverC puppet system configuration
+Description=OverC system configuration
 After=local-fs.target openvswitch-nonetwork.service network.target
 Before=lxc.service
 
 [Service]
 Type=forking
 Environment=FACTER_ipaddress="192.168.42.2"
-#Run unconditionally 
-#ExecStart=/usr/bin/puppet apply /etc/puppet/manifests/site.pp
-#Only run on first boot and if RPM db has changed
-ExecStart=/bin/sh -c "[ /var/lib/rpm/Packages -nt /var/lib/rpm/puppet_run ] && /usr/bin/puppet apply /etc/puppet/manifests/site.pp && cp --attributes-only -p /var/lib/rpm/Packages /var/lib/rpm/puppet_run"
-
 
 [Install]
 WantedBy=multi-user.target
