overc: disable wic images ; disable recommendations in sample config
Signed-off-by: Paul Gortmaker <paul.gortmaker@windriver.com>
Signed-off-by: Bruce Ashfield <bruce.ashfield@windriver.com>

--- a/conf/local.conf.sample
+++ b/conf/local.conf.sample
@@ -150,10 +150,13 @@ PACKAGE_CLASSES ?= "package_rpm"
 IMAGE_FSTYPES += "tar.bz2"
 NOISO = "1"
 IMAGE_FSTYPES += "ext3"
+IMAGE_FSTYPES_remove = "wic"
 
 IMAGE_FEATURES += "dev-pkgs"
 #IMAGE_FEATURES += "splash ssh-server-openssh hwcodecs package-management"
 IMAGE_FEATURES += "ssh-server-openssh package-management"
+# do not install recommendations
+NO_RECOMMENDATIONS = "1"
 
 #
 # Extra image configuration defaults
