local.conf: Also disable wic.bmap image types.
These are now failing in a similar fashion as the previous "wic"
image types were.  As they are not of interest to overc at the
moment, we simply block them as well.

Reported-by: Mark Asselstine <mark.asselstine@windriver.com>
Signed-off-by: Paul Gortmaker <paul.gortmaker@windriver.com>
Signed-off-by: Bruce Ashfield <bruce.ashfield@windriver.com>

--- a/conf/local.conf.sample
+++ b/conf/local.conf.sample
@@ -150,7 +150,7 @@ PACKAGE_CLASSES ?= "package_rpm"
 IMAGE_FSTYPES += "tar.bz2"
 NOISO = "1"
 IMAGE_FSTYPES += "ext3"
-IMAGE_FSTYPES_remove = "wic"
+IMAGE_FSTYPES_remove = "wic wic.bmap"
 
 IMAGE_FEATURES += "dev-pkgs"
 #IMAGE_FEATURES += "splash ssh-server-openssh hwcodecs package-management"
