distro: update overc SANITY_TESTED_DISTROS to match upstream.
We copied the data for overc a while ago ; I looked into sharing
it vs. copy/fork but that seems to fail the risk vs. reward ratio
at this point in time.  So just update our copy.

We keep our overc entry for the self-builder, and I add ubu 16.10
since I've been personally using that for quite some time.  The
conversion to all lower case was an upstream change that I've just
followed accordingly.

Signed-off-by: Paul Gortmaker <paul.gortmaker@windriver.com>
Signed-off-by: Bruce Ashfield <bruce.ashfield@windriver.com>

--- a/conf/distro/overc.conf
+++ b/conf/distro/overc.conf
@@ -87,15 +87,23 @@ CONNECTIVITY_CHECK_URIS ?= " \
 
 SANITY_TESTED_DISTROS ?= " \
             overc-1.0 \n \
-            Ubuntu-12.04 \n \
-            Ubuntu-14.04 \n \
-            Ubuntu-14.10 \n \
-            Fedora-20 \n \
-            CentOS-6.5 \n \
-            Debian-7.* \n \
-            Debian-8.* \n \
-            openSUSE-project-12.3 \n \
-            openSUSE-project-13.1 \n \
+            poky-1.8 \n \
+            poky-2.0 \n \
+            poky-2.1 \n \
+            poky-2.2 \n \
+            ubuntu-14.04 \n \
+            ubuntu-14.10 \n \
+            ubuntu-15.04 \n \
+            ubuntu-15.10 \n \
+            ubuntu-16.04 \n \
+            ubuntu-16.10 \n \
+            fedora-22 \n \
+            fedora-23 \n \
+            fedora-24 \n \
+            centos-7 \n \
+            debian-8 \n \
+            opensuse-13.2 \n \
+            opensuse-42.1 \n \
             "
 
 # Default hash policy for distro
