--- a/conf/x86_64.conf
+++ b/conf/x86_64.conf
@@ -2,3 +2,6 @@
 require conf/multilib.conf
 MULTILIBS = "multilib:lib32"
 DEFAULTTUNE_virtclass-multilib-lib32 = "x86"
+
+OVERC_COMMON_EXTENDED_ARCH += " grub"
+RDEPENDS_packagegroup-builder-extended_ARCH += " grub"
