openvswitch: mirror changes in ovs uprev
The openvswitch uprev (v2.6.1) just completed in meta-virtualization
resulted in a reorganisation of the systemd service names for
ovs. Reflect these changes here to ensure services have valid
dependencies.

Signed-off-by: Mark Asselstine <mark.asselstine@windriver.com>

--- a/meta-cube/recipes-support/overc-conftools/source/overc-conftools.service
+++ b/meta-cube/recipes-support/overc-conftools/source/overc-conftools.service
@@ -1,6 +1,6 @@
 [Unit]
 Description=OverC system configuration service
-After=local-fs.target openvswitch-nonetwork.service network.target
+After=local-fs.target openvswitch.service network.target
 Before=lxc.service
 
 [Service]
