essential: autostart must run after dbus is available
Signed-off-by: Bruce Ashfield <bruce.ashfield@windriver.com>

--- a/meta-cube/recipes-support/essential-init/files/essential-autostart.service
+++ b/meta-cube/recipes-support/essential-init/files/essential-autostart.service
@@ -1,7 +1,7 @@
 [Unit]
 Description=Essential Autoboot Code
 After=syslog.target network.target
-After=getty@tty2.service
+After=getty@tty2.service dbus.service
 
 [Service]
 Type=simple
