essential-autostart.service: Switch to forking service
With the fixes to pflask, the essential-autostart.service will
background all autostart containers properly as services.  The tty
connections are automatically established by the pflask configuration
per container.

Signed-off-by: Jason Wessel <jason.wessel@windriver.com>
Signed-off-by: Bruce Ashfield <bruce.ashfield@windriver.com>

--- a/meta-cube/recipes-support/essential-init/files/essential-autostart.service
+++ b/meta-cube/recipes-support/essential-init/files/essential-autostart.service
@@ -1,22 +1,12 @@
 [Unit]
 Description=Essential Autoboot Code
 After=syslog.target network.target
-After=getty@tty2.service dbus.service
+After=dbus.service
 
 [Service]
-Type=simple
-RemainAfterExit=yes
-# ExecStartPre=
-# ExecStartPre=
+Type=forking
+RemainAfterExit=no
 ExecStart=-/usr/sbin/essential-autostart
-#ExecStop=
-# Environment=BOOTUP=serial
-# Environment=CONSOLETYPE=serial
-Delegate=yes
-TTYPath=/dev/tty2
-StandardInput=tty
-StandardOutput=tty
-# StandardError=syslog
 
 [Install]
 WantedBy=basic.target
