cube: use virtual/runc and set runc-docker as preferred
Signed-off-by: Bruce Ashfield <bruce.ashfield@windriver.com>

--- a/meta-cube/conf/layer.conf
+++ b/meta-cube/conf/layer.conf
@@ -39,6 +39,9 @@ FILESYSTEM_PERMS_TABLES = "files/fs-perms.txt files/cube-fs-perms.txt"
 # Use latest dev kernel.
 PREFERRED_PROVIDER_virtual/kernel ?= "linux-yocto-dev"
 
+PREFERRED_PROVIDER_virtual/runc ?= "runc-docker"
+PREFERRED_PROVIDER_virtual/containerd ?= "containerd-docker"
+
 # Default is currently /home/root which is non-standard.
 ROOT_HOME = "/root"
 
